--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -60,7 +60,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 	<script type="text/javascript" src="{% static 'js/alertify.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/jscookie.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jPages.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/d3.min.js' %}"></script>
+    <!--<script type="text/javascript" src="{% static 'js/d3.min.js' %}"></script>-->
     <script type="text/javascript" src="{% static 'subjects/js/modal_subject.js' %}"></script>
 
   	<!-- Font awesome -->
