--- a/subjects/templates/subjects/view.html
+++ b/subjects/templates/subjects/view.html
@@ -67,7 +67,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                             </ul>
                         {% endif %}
 
-                        <a href="" class="pull-right action_icon" data-toggle="tooltip" data-placement="bottom" title="{% trans 'Analytics' %}"><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
+                        <a href="{% url 'dashboards:view_subject' subject.slug %}" class="pull-right action_icon" data-toggle="tooltip" data-placement="bottom" title="{% trans 'Analytics' %}"><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
                         <a href="{% url 'notifications:view' subject.slug %}" class="pull-right action_icon" data-toggle="tooltip" data-placement="bottom" title="{% trans 'Pendencies' %}">
                             <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                             {% notifies_number subject request.user %}
