Reconstruction of the Gantt chart's legend

--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -75,7 +75,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 //backcolors: ["#C43535", "#F9BA43", "#218AB7", "#545454", "#00C150"],
                 backcolors: ["#F47F3F", "#FFE57F", "#EDEDED", "#DB3434", "#6BBF52"],
 
-                texts: ["Atrasada", "Dentro do Prazo", "Tarefa Futura", "Perdida", "Concluída"],
+                texts: ["Atrasada", "No prazo", "Planejada", "Perdida", "Concluída"],
                 texts2: ["Esta tarefa está atrasada", "Você ainda não realizou esta tarefa", "", "Você perdeu esta tarefa", ""],
             },
             interactions: {
