Changing colors of Gantt

--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -71,7 +71,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 maxrow: 5,
                 contextHeight: 0.1,
                 //colors: ["#AD1111", "#FAA916", "#0B4F6C", "#343434", "#00993F"],//0-atrasado 1-dentro_do_prazo 2-pendencia futura 3-não_concluida 4-finalizada
-                colors: ["#F45D0C", "#FFD83F", "#D6D6D6", "#C90808", "#3BA51A"],
+                colors: ["#FF9001", "#dfbd31", "#D6D6D6", "#f44336", "#3BA51A"],
                 //backcolors: ["#C43535", "#F9BA43", "#218AB7", "#545454", "#00C150"],
                 backcolors: ["#F47F3F", "#FFE57F", "#EDEDED", "#DB3434", "#6BBF52"],
 
