--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -74,13 +74,11 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             layout: {
                 maxrow: 5,
                 contextHeight: 0.1,
-                //colors: ["#AD1111", "#FAA916", "#0B4F6C", "#343434", "#00993F"],//0-atrasado 1-dentro_do_prazo 2-pendencia futura 3-não_concluida 4-finalizada
                 colors: ["#FF9001", "#dfbd31", "#D6D6D6", "#f44336", "#3BA51A"],
-                //backcolors: ["#C43535", "#F9BA43", "#218AB7", "#545454", "#00C150"],
-                //backcolors: ["#F47F3F", "#FFE57F", "#EDEDED", "#DB3434", "#6BBF52"],
-
                 texts: ["Atrasada", "No prazo", "Planejada", "Perdida", "Concluída"],
                 texts2: ["Esta tarefa está atrasada", "Você ainda não realizou esta tarefa", "", "Você perdeu esta tarefa", ""],
+                backcolor: "#F5F5F5",
+                percent_min:0.3
             },
             interactions: {
                 button: function (element, data) {
@@ -104,9 +102,14 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         var ganttChart = new GanttChart(chartConfig);
 
         window.addEventListener('resize', function(){
-            ganttChart.resize();
-            ganttChart.bottomLegend.resize();
-	    });
+            Promise.resolve().then(function(){
+                ganttChart.resize();
+                ganttChart.bottomLegend.resize();
+            });
+            /*setTimeout(function() { 
+                
+             }, 100);*/
+        });
 
     </script>
 {% endblock %}
