--- a/dashboards/templates/dashboards/subjects_other_indicators.html
+++ b/dashboards/templates/dashboards/subjects_other_indicators.html
@@ -98,7 +98,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 </style>
 
 <div class="col-md-4 col-xs-12 col-sm-8 col-lg-4">
-    <div style="font-size:16px; text-align:left; color: #000; padding-left: 10px; ">
+    <div style="font-size:16px; text-align:left; color: #000; padding-left: 10px; padding-bottom: 5 px;">
         <b>{% trans 'Important indicators' %}</b>
         <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" 
             title="{% trans 'Shows indicators comparing your situation to the class' %}"></i>
