Parting GanttChart; Creating tittles and subtittles

--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -56,13 +56,37 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     {% endif %}
     <!--{{ graph_data }}-->
 
-    <div id="gantt" class="col-md-12 col-xs-12 col-sm-12 col-lg-12"></div>
-    <div id="period" class="col-md-12 col-xs-12 col-sm-12 col-lg-12"></div>
-    <div id="legend-gantt" class="col-md-12 col-xs-12 col-sm-12 col-lg-12"></div>
-
-    <div class="col-md-2 col-xs-12 col-sm-12 col-lg-2 text-center">
-            <button onclick="ganttChart.reset();" class="btn btn-success btn-raised btn-block" style="position: initial;"> Hoje{% trans "To day" as bread %} </button>
+    <div align="left" style="font-size:22px; color: #878787; padding-top: 0px;">{% trans 'My Essential Tasks' %}</div>
+    <hr style="height:3px; background-color:#878787; margin-top: 5px;">
+    
+    <div id="gantt" class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
+        <div style="font-size:16px; text-align:left; color: #000; padding-left: 10px; "><b>{% trans 'Detail of Tasks' %}</b></div>
+		<hr style="height:2px; background-color:#878787;margin-top: 5px;margin-bottom: 5px;">
     </div>
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
+        <div style="font-size:16px; text-align:left; color: #000; padding-left: 10px; "><b>{% trans 'Filters' %}</b></div>
+        <hr style="height:2px; background-color:#878787;margin-top: 5px;margin-bottom: 5px;">
+    <div id="period" class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
+        <!--<hr style="height:2px; background-color:#878787;margin-top: 5px;margin-bottom: 5px;">-->
+        <div style="font-size:16px; text-align:left; color: #bbb; padding-left: 10px; "><b>{% trans 'Select the period' %}</b></div>
+    </div>
+    <div id="legend-gantt" class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
+            <hr style="height:2px; background-color:#bbb;margin-top: 5px;margin-bottom: 5px;">
+            <div style="font-size:16px; text-align:left; color: #bbb; padding-left: 10px; "><b>{% trans 'Select the status' %}</b></div>
+            
+    </div>
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
+            <hr style="height:2px; background-color:#bbb;margin-top: 5px;margin-bottom: 5px;">
+    <div style="font-size:16px; text-align:left; color: #bbb; padding-left: 10px; "><b>{% trans 'Select what we have for today' %}</b></div>
+            
+    <div class="col-md-2 col-xs-12 col-sm-12 col-lg-2 text-center">
+            <button onclick="ganttChart.reset();" class="btn btn-success btn-raised btn-block" style="position: initial;"> {% trans "Today" %} </button>
+    </div>
+    </div>
+    </div>
+    <hr style="height:3px; background-color:#878787; margin-top: 5px;">
+
+    
 
     <script type="text/javascript">
         var chartConfig = {
