--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -22,9 +22,23 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 {% endblock style %}
 
 {% block javascript %}
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script>
+        window.labels_date = {
+            dateTime: "%x, %X",
+            date: "%d/%m/%Y",
+            time: "%-I:%M:%S %p",
+            periods: ["AM", "PM"],
+            days: ["{% trans 'Sunday' %}", "{% trans 'Monday' %}", "{% trans 'Tuesday' %}", "{% trans 'Wednesday' %}", "{% trans 'Thursday' %}", "{% trans 'Friday' %}", "{% trans 'Saturday' %}"],
+            shortDays: ["{% trans 'Sun' %}", "{% trans 'Mon' %}", "{% trans 'Tue' %}", "{% trans 'Wed' %}", "{% trans 'Thu' %}", "{% trans 'Fri' %}", "{% trans 'Sat' %}"],
+            months: ["{% trans 'January' %}", "{% trans 'February' %}", "{% trans 'March' %}", "{% trans 'April' %}", "{% trans 'May' %}", "{% trans 'June' %}", "{% trans 'July' %}", "{% trans 'August' %}", "{% trans 'September' %}", "{% trans 'October' %}", "{% trans 'November' %}", "{% trans 'December' %}"],
+            shortMonths: ["{% trans 'Jan' %}", "{% trans 'Feb' %}", "{% trans 'Mar' %}", "{% trans 'Apr' %}", "{% trans 'May' %}", "{% trans 'Jun' %}", "{% trans 'Jul' %}", "{% trans 'Aug' %}", "{% trans 'Sep' %}", "{% trans 'Oct' %}", "{% trans 'Nov' %}", "{% trans 'Dec' %}"]
+        }
+	
+    </script>
+    <script src="{% static 'analytics/js/d3.v5.min.js' %}"></script><!--https://d3js.org/d3.v5.min.js-->
 
     <script src="{% static 'analytics/js/JSUtil.js' %}"></script>
+    
     <script src="{% static 'analytics/js/Legend.js' %}"></script>
     <script src="{% static 'analytics/js/brush_zoom.js' %}"></script>
 
@@ -54,7 +68,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         </form>
         <br clear="all" />
     {% endif %}
-    {#{{ graph_data }}#}
+    {# {{ graph_data }} #}
 
     <div align="left" style="font-size:22px; color: #878787; padding-top: 0px;">{% trans 'My Essential Tasks' %}</div>
     <hr style="height:3px; background-color:#878787; margin-top: 5px;">
@@ -102,18 +116,23 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             layout: {
                 maxrow: 5,
                 colors: ["#FF9001", "#dfbd31", "#D6D6D6", "#f44336", "#3BA51A"],
-                texts: ["Atrasada", "No prazo", "Planejada", "Perdida", "Concluída"],
-                texts2: ["Esta tarefa está atrasada", "Você ainda não realizou esta tarefa", "", "Você perdeu esta tarefa", ""],
+                texts: ['{% trans "Late"%}', '{% trans "On time"%}', '{% trans "Planned"%}', '{% trans "Lost"%}', '{% trans "Completed"%}'],
+                texts2: ['{% trans "This task is late"%}', '{% trans "You have not yet accomplish this task"%}', "", '{% trans "You missed this task"%}', ""],
                 backcolor: "#F5F5F5",
-                percent_min:0.3
+                percent_min:0.3,
+                percent_text:'{% trans "Task already accomplish by % of participants" %}',
+                buttonAccess_text:'{% trans "ACCESS TASK" %}',      
+                buttonDoTask_text:'{% trans "DO THE TASK" %}',
+                initDate_text:'{% trans "Start Date / Time: " %}',
+                endDate_text:'{% trans "End Date / Time: " %}',
+                closedDate_text:'{% trans "Task closed on: " %}',
+                language:'{{ language }}'
             },
             interactions: {
                 button: function (element, data) {
                 var classelement = d3.select(element).attr("class");
                 if (classelement == "goto")
                     window.location.assign(data.access_link);
-                else
-                    alert("Agendando a atividade " + data.name + "...");
                 }
             },
             tooltip: {
